fixed how banner height is calculated on small screens

--- a/assets/styles/sections.css
+++ b/assets/styles/sections.css
@@ -13,7 +13,7 @@ section.main-banner {
 }
 
 section.main-banner.full-height {
-    height: 100%;
+    min-height: 100%;
 }
 
 section.main-banner > img {
